[package]
name = "ip_api"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = 0
overflow-checks = false
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[dependencies]
actix-web = "4.10.2"
maxminddb = "0.26.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "time", "macros", "fs", "io-util"] }
once_cell = "1.21.3"
ipnetwork = "0.21.1"
trust-dns-resolver = "0.23.2"
reverse_geocoder = "4.1.1"
csv = "1.3.1"
